# taxis.studio

backend/: .env.example  main.py  pyproject.toml
backend/app/: __init__.py  config.py  constants.py
backend/app/models/: schemas.py
backend/app/routers/: edit.py  generate.py
backend/app/services/: constants.py  gemini_service.py  openai_service.py
frontend/: package.json
frontend/convex/: auth.ts  edits.ts  images.ts  projects.ts  schema.ts  users.ts
frontend/convex/_generated/: api.d.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(auth)/: layout.tsx
frontend/src/app/(auth)/sign-in/: page.tsx
frontend/src/app/(auth)/sign-up/: page.tsx
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/app/project/[projectId]/: layout.tsx  page.tsx
frontend/src/components/editor/: EditorContext.tsx  ImageCanvas.tsx  ImageUpload.tsx  PromptPanel.tsx  Toolbar.tsx  index.ts
frontend/src/components/motion/: AnimatedGradient.tsx  FadeIn.tsx  GlowCard.tsx  MagneticButton.tsx  StaggerContainer.tsx  index.ts
frontend/src/components/providers/: auth-provider.tsx
frontend/src/components/ui/: button.tsx  dialog.tsx  input.tsx  slider.tsx  tabs.tsx
frontend/src/hooks/: useScrollAnimation.ts
